cloudformation-templates/template-route_table.yml
AWSTemplateFormatVersion: 2010-09-09

Description: VPC cloudformation template

Parameters:
  VpcStackName:
    Type: String
    Description: Name of the VPC stack
    MinLength: 1
    MaxLength: 255
  SubnetStackName:
    Type: String
    Description: Name of the subnet stack
    MinLength: 1
    MaxLength: 255

Resources:
  SimplePublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: 
        Fn::ImportValue: !Sub ${VpcStackName}-VPC
      Tags:
      - Key: Name
        Value: SimplePublicRouteTable

  SimpleDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref SimplePublicRouteTable
      GatewayId: 
        Fn::ImportValue: !Sub ${VpcStackName}-InternetGateway

  SimplePublicSubnet1RTA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SimplePublicRouteTable
      SubnetId: 
        Fn::ImportValue: !Sub ${SubnetStackName}-PublicSubnet1

  SimplePublicSubnet2RTA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SimplePublicRouteTable
      SubnetId: 
        Fn::ImportValue: !Sub ${SubnetStackName}-PublicSubnet2

  SimplePrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: 
        Fn::ImportValue: !Sub ${VpcStackName}-VPC
      Tags:
      - Key: Name
        Value: SimplePrivateRouteTable
  
  SimpleRoute1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref SimplePrivateRouteTable
      NatGatewayId: 
        Fn::ImportValue: !Sub ${SubnetStackName}-NATGateway1

  SimplePrivateSubnet1RTA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SimplePrivateRouteTable
      SubnetId: 
        Fn::ImportValue: !Sub ${SubnetStackName}-PrivateSubnet1
  
  SimplePrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: 
        Fn::ImportValue: !Sub ${VpcStackName}-VPC
      Tags:
      - Key: Name
        Value: SimplePrivateRouteTable2

  SimpleRoute2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref SimplePrivateRouteTable2
      NatGatewayId: 
        Fn::ImportValue: !Sub ${SubnetStackName}-NATGateway2

  SimplePrivateSubnet2RTA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SimplePrivateRouteTable2
      SubnetId: 
        Fn::ImportValue: !Sub ${SubnetStackName}-PrivateSubnet2
